# nlsid_workshop25_tsfast

./: README.md  benchmark_default_parameters.csv  pyproject.toml  try_benchmarks.py
notebooks/: submission_wh.py  wh_benchmark.ipynb
submission_benchmarks/: benchmark_default_parameters.py  wh_benchmark.py  wh_silverbox.py
