[project]
name = "nlsid-workshop25-tsfast"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "ipykernel>=6.29.5",
    "ipywidgets>=8.1.6",
    "nbdev>=2.4.2",
    "tsfast>=0.1.0",
]

[tool.uv.sources]
tsfast = { git = "https://github.com/daniel-om-weber/tsfast.git" }
#tsfast = { path = "../tsfast", editable = true }

[tool.ruff]
ignore = ["F403","F405","E702"]
